# nledger

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  LICENSE.LEDGER  LICENSE.RTF  README.md  _CI.BuildLog.md  build.md  get-nledger-tools.ps1  get-nledger-up.ps1  nledger.md  roadmap.md
Binaries/: README.md
Contrib/: ledger.1.html  ledger3.html  nledger-tools.cmd  nledger-tools.ps1
Contrib/Common/: NLedgerConfig.psm1  NLedgerEnvironment.psm1  SysCommon.psm1  SysConsole.psm1  SysDotnet.psm1  SysPlatform.psm1
Contrib/Extras/: cat.cmd  getQuote.cmd  getQuote.ps1
Contrib/Install/: NLInstall.psm1  NLedger.Install.cmd  NLedger.Install.ps1  NLedger.Launcher.ps1  NLedger.Uninstall.cmd  SysHardLink.psm1  SysNGen.psm1  SysPath.psm1
Contrib/LiveDemo/: NLDoc.LiveDemo.Launch.cmd  NLDoc.LiveDemo.Launch.sh  NLDoc.LiveDemo.config.xml  NLDoc.LiveDemo.ledger3.html  NLDoc.LiveDemo.psm1  PsHttpListener.psm1
Contrib/NLManagement/: NLCommon.psm1  NLDoc.LiveDemo.Launch.cmd  NLDoc.LiveDemo.WebConsole.cmd  NLDoc.LiveDemo.WebConsole.ps1  NLDoc.LiveDemo.config.xml  NLDoc.LiveDemo.ledger3.html  NLDoc.LiveDemo.psm1  NLSetup.Console.cmd  NLSetup.Console.ps1  NLSetup.psm1  NLWhere.psm1  PsHttpListener.psm1
Contrib/NLTestToolkit/: NLTest.IgnoreList.xml  NLTest.Launcher.ps1  NLTest.Meta.xml  NLTest.cmd  NLTest.ps1  NLTest.xslt
Contrib/Python/: GetPython.Console.ps1  (+5 more)
Contrib/python/NLedgerPackage/: README.md  build.ps1  setup.cfg  setup.py  setup_runtime.ps1
Contrib/python/NLedgerPackage/src/ledger/: __init__.py
Contrib/python/NLedgerPackage/src/ledger/conf/: __init__.py  ledger.config
Source/: NLedger.sln  ProductInfo.xml
Source/NLedger.Extensibility.Python.Module/: LICENSE.txt  README.md  build.ps1  setup.cfg  setup.py
Source/NLedger.Extensibility.Python.Module/src/ledger/: __init__.py
Source/NLedger.Extensibility.Python.Module/tests/: ledger_tests.py
(+570 files in other folders)
