[metadata]
name = ledger
license_files = LICENSE.txt
author = Dmitry Merzlyakov
author_email = dmitry.merzlyakov@gmail.com
description = .Net Ledger Python module provides .Net Ledger capabilities in Python interpreter session.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dmitry-merzlyakov/nledger
project_urls =
    Bug Tracker = https://github.com/dmitry-merzlyakov/nledger/issues
classifiers =
    Topic :: Office/Business :: Financial :: Accounting
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: C#

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    clr_loader>=0.1.5
    pythonnet>=2.5.1

[options.packages.find]
where = src

[options.package_data]
ledger.conf = ledger.config