[metadata]
name = mypytest
license_files = LICENSE.txt
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    clr_loader>=0.1.5
    pythonnet>=3.0.0.dev1

[options.packages.find]
where = src

[options.package_data]
mypytest.conf = mypytest.config